# electronics

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
docker/: Dockerfile  entrypoint.sh
electronics/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
electronics/fixtures/: networknode_fixture.json  users_fixture.json
electronics/migrations/: 0001_initial.py
